Multi-threading is done I hope so because testing is yet to be done.